# cppup

./: .tarpaulin.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: template_rendering.rs
hooks/: install-hooks.sh  pre-commit
src/: cli.rs  config.rs  lib.rs  main.rs  project.rs  templates.rs
src/project/: builder.rs  config.rs  mod.rs  validator.rs
templates/: CMakeLists.txt.hbs  Dockerfile.hbs  Makefile.hbs  README.md.hbs  boost_test_main.cpp.hbs  catch2_main.cpp.hbs  clang-format.hbs  conanfile.txt.hbs  editorconfig.hbs  example.cpp.hbs  github-actions.yml.hbs  gitignore.hbs  header.hpp.hbs  library.cpp.hbs  main.cpp.hbs  tests.cmake.hbs  vcpkg.json.hbs  vscode-settings.json.hbs
templates/cmake/: CMakeLists.txt.hbs  compilation-flags.cmake.hbs  example.cmake.hbs  options.cmake.hbs  source.cmake.hbs
templates/licenses/: Apache-2.0.hbs  BSD-3-Clause.hbs  GPL-3.0.hbs  MIT.hbs
templates/package-managers/: conanfile.txt.hbs  vcpkg.json.hbs
templates/static-analyzers/: clang-tidy.hbs  cppcheck-suppressions.xml.hbs
templates/tests/: catch2_main.cpp.hbs  doctest_main.cpp.hbs  gtest_main.cpp.hbs  tests.cmake.hbs
tests/: integration_tests.rs
