[package]
name = "cppup"
version = "0.1.0"
edition = "2021"
authors = ["Nauris Linde <naurislinde@gmail.com>"]
description = "An interactive C++ project generator"
license = "MIT"

[[bin]]
name = "cppup"
path = "src/main.rs"

[lib]
name = "cppup"
path = "src/lib.rs"

[dependencies]
inquire = "0.7"                                    # For interactive CLI prompts
anyhow = "1.0"                                     # For error handling
indicatif = "0.17"                                 # For progress bars
clap = { version = "4.4", features = ["derive"] }  # For CLI argument parsing
which = "7.0"                                      # For checking if tools are installed
regex = "1.10"                                     # For version parsing
handlebars = "6.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"                                     # For getting config directories
tokio = { version = "1.0", features = ["full"] }   # For async operations
serde_json = "1.0"                                 # For JSON config files
dirs = "5.0"                                       # For cross-platform directories
log = "0.4"                                        # For logging
env_logger = "0.11"                                # For environment-based logging
thiserror = "1.0"                                  # For better error types

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "template_rendering"
harness = false
