[package]
name = "cppup"
version = "0.1.0"
edition = "2021"
authors = ["Nauris Linde <naurislinde@gmail.com>"]
description = "An interactive C++ project generator"
license = "MIT"

[[bin]]
name = "cppup"
path = "src/main.rs"

[lib]
name = "cppup"
path = "src/lib.rs"

[dependencies]
inquire = "0.7"                                    # For interactive CLI prompts
anyhow = "1.0"                                     # For error handling
indicatif = "0.17"                                 # For progress bars
clap = { version = "4.5", features = ["derive"] }  # For CLI argument parsing
which = "7.0"                                      # For checking if tools are installed
regex = "1.10"                                     # For version parsing
handlebars = "6.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"                                     # For getting config directories

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
